# Kravets_Dmitry_ExamenCPP.zip

./: CMakeLists.txt  CalcPromedio.cpp  FiltroGrado.cpp  README.md  ausencia.h  estudiante.cpp  opBas.cpp  optMemoria.cpp
gestion profesores/: profesores.cpp  profesores.h
gestión de estudiante/: estudiante.cpp
manejo de ausencia/: ausencia.cpp  ausencia.h
manejo de excepciones/: ManejoExcep.cpp
operaciones básicas/: opBas.cpp
promedio del estudiante/: CalcPromedio.cpp
